npm-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app.kubernetes.io/instance: vfrog-webapp
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: npm-app-chart
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: npm-app-chart-0.0.1
  name: vfrog-webapp-npm-app-chart
  namespace: vfrog-npm-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: vfrog-webapp
    app.kubernetes.io/name: npm-app-chart

  # type: NodePort
  # loadBalancerIP: $IP
  # ipFamilies:
  # - IPv4
  # ipFamilyPolicy: SingleStack
  # sessionAffinity: None
  # type: ClusterIP
# status:
#   loadBalancer: {}
