npm-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vfrog-npm-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    kubernetes.io/ingress.global-static-ip-name: "vfrog-webapp-npm-app-chart"
#    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
#    nginx.ingress.kubernetes.io/auth-tls-secret: "vfrog-npm-app/tls-secret"
#    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
#    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
#    cert-manager.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - pe-task-demo.duckdns.org
    secretName: vfrog-tls-secret
  rules:
  - host: pe-task-demo.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vfrog-webapp-npm-app-chart
            port:
              number: 8080
